fix: 새로고침 버튼 overlap시 hover 상실

--- a/packages/view/src/components/TemporalFilter/TemporalFilter.scss
+++ b/packages/view/src/components/TemporalFilter/TemporalFilter.scss
@@ -32,8 +32,8 @@
     height: 140px;
     width: 100%;
     align-content: space-around;
-    position: relative;
-    top: 30px;
+    
+    margin-top: 30px;
   }
 
   .line-charts-svg {
@@ -95,10 +95,12 @@
   &:active {
     background-color: black;
     color: white;
+    z-index: 10;
   }
 
   &:hover {
     background-color: white;
     color: black;
+    z-index: 10;
   }
 }
